--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/lumen-framework": "5.2.*",
         "vlucas/phpdotenv": "~2.2",
-        "danielmewes/php-rql": "^2.2"
+        "danielmewes/php-rql": "^2.2",
+        "duxet/laravel-rethinkdb": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
