--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "laravel/lumen-framework": "5.2.*",
         "vlucas/phpdotenv": "~2.2",
         "danielmewes/php-rql": "^2.2",
-        "duxet/laravel-rethinkdb": "dev-master"
+        "duxet/laravel-rethinkdb": "dev-master",
+        "predis/predis": "^1.0",
+        "illuminate/redis": "^5.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
